# aceboy

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh  vcpkg.json
cmake/: nfd.cmake  rlimgui.cmake
src/: cpu.cpp  cpu.h  decoder.cpp  decoder.h  emulator.cpp  emulator.h  instructions.h  interface.cpp  interface.h  main.cpp  memory.h  opcodes.h  registers.h
